Refactored into 2 bundles

--- a/src/IKTO/TestportalEmu/GuiBundle/Resources/config/routing.yml
+++ b/src/IKTO/TestportalEmu/GuiBundle/Resources/config/routing.yml
@@ -1,11 +1,11 @@
 ikto_testportal_emu_main:
     path: /
     defaults:
-        _controller: IktoTestportalEmuBundle:Default:index
+        _controller: IktoTpEmuGuiBundle:Default:index
     methods: [ GET ]
 
 ikto_testportal_emu_check:
     path: /
     defaults:
-        _controller: IktoTestportalEmuBundle:Default:check
+        _controller: IktoTpEmuGuiBundle:Default:check
     methods: [ POST ]
